@@ -72,6 +72,9 @@ SPVM::Test - SPVM test module
   sub DOUBLE_PRECICE : double () { return 2147483647.0; }
 
   sub main : int ($args : string[]) {
+    {
+      my $string = "\N{U+3042}\N{U+3044}\N{U+3046}";
+    }
     
     {
       my $string = "abc";
